# DownloadIssues

./: .env.example  .gitignore  CLAUDE.md  README.md  archive-encrypt-v2.sh  archive-encrypt.sh  clean.sh  clean_react.sh  cleanup_project.py  compare_md5.py  decrypt-restore-v2.sh  decrypt-restore.sh  download_issues.py  download_issues_backed.py  extract_hex_from_edits.py  free.py  pull.py  push.py  pyproject.toml  reassemble_parts.sh  rename_changes.py  server.py  verify_changes.py
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
extension/lib/: gitflic-api.js  github-api.js  metadata.js  pull.js  push.js
lib/: __init__.py  config.py  crypto.py  gitflic_api.py  github_api.py  integrity.py  metadata.py  provider.py
