[project]
name = "download-issues"
version = "0.1.0"
description = "Download and monitor GitHub issues"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
dt-push = "push:main"
dt-pull = "pull:main"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
force-include = {"push.py" = "push.py", "pull.py" = "pull.py"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
